Tweaks to .gitconfig. Auto-detect cpus for threads, and remove limit on diff rename detection.

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -19,9 +19,12 @@
 [diff]
     renames = copy
     tool = opendiff
+    renamelimit = 0
 [difftool]
     prompt = false
 [merge]
     tool = opendiff
 [mergetool]
     prompt = false
+[pack]
+    threads = 0
