gitconfig: push.default = current

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -43,7 +43,7 @@
 	trustExitCode = false
 	keepBackup = false
 [push]
-	default = simple
+	default = current
 [filter "media"]
 	clean = git media clean %f
 	smudge = git media smudge %f
