--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -43,7 +43,7 @@
 	trustExitCode = false
 	keepBackup = false
 [mergetool "launchp4merge"]
-	cmd = /Applications/p4merge.app/Contents/Resources/launchp4merge "$BASE" "$LOCAL" "$REMOTE" "$MERGED"
+	cmd = /Applications/p4merge.app/Contents/Resources/launchp4merge $BASE $LOCAL $REMOTE $MERGED
 	keepTemporaries = false
 	trustExitCode = false
 	keepBackup = false
@@ -56,8 +56,9 @@
 [credential]
 	helper = osxkeychain
 [filter "lfs"]
-	clean = git-lfs clean %f
-	smudge = git-lfs smudge %f
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
 	required = true
+	process = git-lfs filter-process
 [rerere]
 	enabled = true
