--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -64,5 +64,5 @@
 	enabled = true
 [includeIf "gitdir:~/Documents/work/"]
 	path = ~/Documents/work/.gitconfig
-[includeIf "gitdir:~/git"]
+[includeIf "gitdir:~/git/"]
 	path = ~/git/.gitconfig
