--- a/nvim/.local/share/nvim/site/pack/default/start/nvim-tree.lua/.github/workflows/ci.yml
+++ b/nvim/.local/share/nvim/site/pack/default/start/nvim-tree.lua/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     name: luacheck
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Prepare
         run: |
@@ -27,8 +27,9 @@ jobs:
     name: stylua
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: JohnnyMorganz/stylua-action@1.0.0
+      - uses: actions/checkout@v3
+      - uses: JohnnyMorganz/stylua-action@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          version: latest
           args: --color always --check lua/
